product-page added

--- a/client/categ.html
+++ b/client/categ.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
 	<title>Get loot</title>
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="bower_components/bootstrap-select/dist/css/bootstrap-select.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:bold">
 	<link rel="stylesheet" href="fonts/fonts.css">
 	<link rel="stylesheet" href="bem_components/common/common.css">
 	<link rel="stylesheet" href="bem_components/header/header.css">
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="bem_components/category-head/category-head.css">
 	<link rel="stylesheet" href="bem_components/main-content/main-content.css">
 	<link rel="stylesheet" href="bem_components/footer/footer.css">
+	<link rel="stylesheet" href="bem_components/select/select.css">
 </head>
 
 <body>
@@ -314,7 +315,9 @@
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="bower_components/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 	<script src="bem_components/header/scripts/mobile-menu.js"></script>
+	<script src="bem_components/select/select.js"></script>
 	<script src="//vk.com/js/api/openapi.js?121"></script>
 	<script>
 		VK.Widgets.Group('vkGroups', {
