--- a/client/main.html
+++ b/client/main.html
@@ -47,7 +47,8 @@
 									<div class="contacts__item">
 										<div class="contacts__icon contacts__icon--chat"></div>
 										<div class="contacts__text contacts__text--chat">чат с оператором
-											<br><span class="contacts__text--small">(с 11 до 24 по мск. времени)</span></div>
+											<br><span class="contacts__text--small">(с 11 до 24 по мск. времени)</span>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -92,18 +93,9 @@
 									<a class="menu-link" href="#">
 										<div class="menu__item">Контакты</div>
 									</a>
-
-									<div class="logentry">
-										<a href="#" class="logentry__link">Личный кабинет</a>
-										<div>
-											<div class="logentry__email">
-												<i class="material-icons person-icon">person</i> Abracadabra@gmail.com</div>
-											<div class="logout">
-												<span>/</span>
-												<a href="#" class="logout__link">Выйти</a>
-											</div>
-										</div>
-									</div>
+									<a class="menu-link" href="#">
+										<div class="menu__item">Личный кабинет</div>
+									</a>
 								</div>
 							</div>
 						</div>
@@ -146,87 +138,96 @@
 					</div>
 				</div>
 			</header>
-			<div class="sub-categories-area">
-				<div class="sub-categories">
-					<div class="sub-categories__item sub-categories__title">
-						<span>World of Warcraft:</span>
+			<div class="slider-area">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="slider paper-shadow-z2">
+							<div id="main-slider" class="carousel slide" data-ride="carousel">
+								<div class="carousel-inner" role="listbox">
+									<a href="http://somelink.com" target="_blank" class="item active">
+										<img src="./img/slider/1.png" alt="">
+									</a>
+									<a href="http://somelink.com" target="_blank" class="item">
+										<img src="./img/slider/1.png" alt="">
+									</a>
+									<a href="http://somelink.com" target="_blank" class="item">
+										<img src="./img/slider/1.png" alt="">
+									</a>
+								</div>
+								<div class="slider-controls">
+									<a href="#main-slider" class="slider-controls__btn" role="button" data-slide="prev">
+										<i class="material-icons slider-icon">chevron_left</i>
+									</a>
+									<a href="#main-slider" class="slider-controls__btn" role="button" data-slide="next">
+										<i class="material-icons slider-icon">chevron_right</i>
+									</a>
+								</div>
+							</div>
+						</div>
 					</div>
-					<a href="#" class="item-link">
-						<div class="sub-categories__item">
-							<span>Золото RU</span>
-						</div>
-					</a>
-
-					<a href="#" class="item-link">
-						<div class="sub-categories__item">
-							<span>Золото EU</span>
-						</div>
-					</a>
-					<a href="#" class="item-link">
-						<div class="sub-categories__item">
-							<span>Лут-рейды</span>
-						</div>
-					</a>
-					<a href="#" class="item-link">
-						<div class="sub-categories__item">
-							<span>Услуги</span>
-						</div>
-					</a>
-					<a href="#" class="item-link">
-						<div class="sub-categories__item">
-							<span>Маунты</span>
-						</div>
-					</a>
-					<a href="#" class="item-link">
-						<div class="sub-categories__item">
-							<span>Ключи RU/EU</span>
-						</div>
-					</a>
-					<a href="#" class="item-link">
-						<div class="sub-categories__item">
-							<span>Прокачка</span>
-						</div>
-					</a>
-					<a href="#" class="item-link">
-						<div class="sub-categories__item">
-							<span>Репутации</span>
-						</div>
-					</a>
-					<a href="#" class="item-link">
-						<div class="sub-categories__item">
-							<span>PvP</span>
-						</div>
-					</a>
 				</div>
 			</div>
-			<div class="category-head-area">
-				<div class="category-head">
-					<div class="category-controls">
-						<div class="category-controls__btn">
-							<i class="material-icons category-icon">chevron_left</i>
+			<div class="labels-area">
+				<div class="labels paper-shadow-z2">
+					<div class="labels__item">
+						<div class="label-container label-container--shield">
+							<div class="shield shield--speed"></div>
 						</div>
-						<span class="category-row">World of warcraft</span>
+						<div class="label-container label-container--text">
+							<div>
+								<div class="labels__title">Быстро</div>
+								<div class="labels__subtitle">Среднее время доставки валюты 26 минут</div>
+							</div>
+						</div>
 					</div>
-					<div class="category-head__title category-head__title--less-font">World of warcraft: лут рейды</div>
+					<div class="labels__item labels__item--active">
+						<div class="label-container label-container--shield">
+							<div class="shield shield--protect"></div>
+						</div>
+						<div class="label-container label-container--text">
+							<div>
+								<div class="labels__title">Надежно</div>
+								<div class="labels__subtitle">Каждую неделю более сотни новых отзывов</div>
+							</div>
+						</div>
+					</div>
+					<div class="labels__item">
+						<div class="label-container label-container--shield">
+							<div class="shield shield--medal"></div>
+						</div>
+						<div class="label-container label-container--text">
+							<div>
+								<div class="labels__title">Проверено</div>
+								<div class="labels__subtitle">Мы успешно работаем с 2009 года</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="main-content-area">
 				<div class="main-content paper-shadow-z2">
 					<div class="row no-padding">
-						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
+						<div class="col-sm-6 col-md-6 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/sub-category/1.png)">
-									</div>
-									<div class="text-right card-price">
-										<span class="card__title card__title--small">4190 <span class="rub">Р</span></span>
-									</div>
-									<div class="card-description">
-										<div class="card-description__title">
-											Чернорук (Эпохальный)
+									<div class="card card--big" style="background-image: url(./img/content/1.png)">
+										<div class="text-center">
+											<span class="card__title card__title--big">World of warcraft</span>
+											<br>
+											<span class="card__subtitle card__subtitle--big">Золото, луты, прокачка, услуги...</span>
 										</div>
-										<div class="card-description__row">
-											Время выполнения: 2-3 часа. Требования: передача аккаунта и 100 уровень.
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-6 no-padding">
+							<div class="card-item">
+								<a href="#" class="card__link">
+									<div class="card card--big" style="background-image: url(./img/content/2.png)">
+										<div class="text-center">
+											<span class="card__title card__title--big">Blade and soul</span>
+											<br>
+											<span class="card__subtitle card__subtitle--big">Золото</span>
 										</div>
 									</div>
 								</a>
@@ -235,17 +236,11 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/sub-category/2.png)">
-									</div>
-									<div class="text-right card-price">
-										<span class="card__title card__title--small">790 <span class="rub">Р</span></span>
-									</div>
-									<div class="card-description">
-										<div class="card-description__title">
-											Убийство Архимонда героик
-										</div>
-										<div class="card-description__row">
-											Время выполнения: 1 час. Требования: 100 уровень.
+									<div class="card card--mini" style="background-image: url(./img/content/3.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Diablo 3</span>
+											<br>
+											<span class="card__subtitle card__subtitle--small">Золото, луты, прокачка, услуги...</span>
 										</div>
 									</div>
 								</a>
@@ -254,17 +249,11 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/sub-category/3.png)">
-									</div>
-									<div class="text-right card-price">
-										<span class="card__title card__title--small">13900 <span class="rub">Р</span></span>
-									</div>
-									<div class="card-description">
-										<div class="card-description__title">
-											Цитадель адского пламени (Эпохальный режим) лут-поход
-										</div>
-										<div class="card-description__row">
-											Время выполнения: 3-4 часа. Требования: передача аккаунта и 100 уровень.
+									<div class="card card--mini" style="background-image: url(./img/content/4.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Tera</span>
+											<br>
+											<span class="card__subtitle card__subtitle--small">Золото</span>
 										</div>
 									</div>
 								</a>
@@ -273,17 +262,11 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/sub-category/4.png)">
-									</div>
-									<div class="text-right card-price">
-										<span class="card__title card__title--small">790 <span class="rub">Р</span></span>
-									</div>
-									<div class="card-description">
-										<div class="card-description__title">
-											Эпохальные подземелья 8/8, 5 человек
-										</div>
-										<div class="card-description__row">
-											Время выполнения: 2-3 часа. Требования: передача аккаунта и 100 уровень.
+									<div class="card card--mini" style="background-image: url(./img/content/5.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Star wars</span>
+											<br>
+											<span class="card__subtitle card__subtitle--small">Кредиты, прокачка</span>
 										</div>
 									</div>
 								</a>
@@ -292,17 +275,11 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/sub-category/5.png)">
-									</div>
-									<div class="text-right card-price">
-										<span class="card__title card__title--small">4190 <span class="rub">Р</span></span>
-									</div>
-									<div class="card-description">
-										<div class="card-description__title">
-											Чернорук (Эпохальный)
-										</div>
-										<div class="card-description__row">
-											Время выполнения: 2-3 часа. Требования: передача аккаунта и 100 уровень.
+									<div class="card card--mini" style="background-image: url(./img/content/6.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Lineage 2</span>
+											<br>
+											<span class="card__subtitle card__subtitle--small">Аренда</span>
 										</div>
 									</div>
 								</a>
@@ -311,17 +288,11 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/sub-category/6.png)">
-									</div>
-									<div class="text-right card-price">
-										<span class="card__title card__title--small">790 <span class="rub">Р</span></span>
-									</div>
-									<div class="card-description">
-										<div class="card-description__title">
-											Убийство Архимонда героик
-										</div>
-										<div class="card-description__row">
-											Время выполнения: 1 час. Требования: 100 уровень.
+									<div class="card card--mini" style="background-image: url(./img/content/7.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">black desert</span>
+											<br>
+											<span class="card__subtitle card__subtitle--small">Прокачка</span>
 										</div>
 									</div>
 								</a>
@@ -330,17 +301,11 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/sub-category/3.png)">
-									</div>
-									<div class="text-right card-price">
-										<span class="card__title card__title--small">13900 <span class="rub">Р</span></span>
-									</div>
-									<div class="card-description">
-										<div class="card-description__title">
-											Цитадель адского пламени (Эпохальный режим) лут-поход
-										</div>
-										<div class="card-description__row">
-											Время выполнения: 3-4 часа. Требования: передача аккаунта и 100 уровень.
+									<div class="card card--mini" style="background-image: url(./img/content/8.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Tes online</span>
+											<br>
+											<span class="card__subtitle card__subtitle--small">Золото</span>
 										</div>
 									</div>
 								</a>
@@ -349,36 +314,27 @@
 						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
 							<div class="card-item">
 								<a href="#" class="card__link">
-									<div class="card card--mini" style="background-image: url(./img/sub-category/4.png)">
-									</div>
-									<div class="text-right card-price">
-										<span class="card__title card__title--small">790 <span class="rub">Р</span></span>
-									</div>
-									<div class="card-description">
-										<div class="card-description__title">
-											Эпохальные подземелья 8/8, 5 человек
-										</div>
-										<div class="card-description__row">
-											Время выполнения: 2-3 часа. Требования: передача аккаунта и 100 уровень.
+									<div class="card card--mini" style="background-image: url(./img/content/3.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Vildstar online</span>
+											<br>
+											<span class="card__subtitle card__subtitle--small">Кредиты, прокачка</span>
 										</div>
 									</div>
 								</a>
 							</div>
 						</div>
-					</div>
-					<div class="content-divider"></div>
-					<div class="text-content">
-						<div class="row no-padding">
-							<div class="col-md-3">
-								<div class="text-content__title">
-									<span class="title-border">Описание</span>
-								</div>
-							</div>
-							<div class="col-md-9">
-								<div class="text-content__description">
-									<p>Основной показатель вашей успешности в игре, а так же просто, для удобства игры является экипировка вов. К сожалению нельзя на прямую купить ВоВ экипировку. Для получения заветного эпика, нужно собирать рейды из 10/25 человек, и проводить многие часы в попытках убить босса. Мы можем сделать все за вас на профессиональном уровне. Любая экипировка вов в героической сложности хм, или в нормальной версии, сложнейшие достижения (ачивы).</p>
-									<p>Так же вы можете купить полный комплект ТИР, или купить прохождение актуального контента вов. Данная услуга не дешевая, но как же приятно видеть цифры, вдвое выше обычных, будь то урон или исцеление!</p>
-								</div>
+						<div class="col-xs-12 col-sm-3 col-md-3 no-padding">
+							<div class="card-item">
+								<a href="#" class="card__link">
+									<div class="card card--mini" style="background-image: url(./img/content/6.png)">
+										<div class="text-center">
+											<span class="card__title card__title--small">Aion</span>
+											<br>
+											<span class="card__subtitle card__subtitle--small">Кинары</span>
+										</div>
+									</div>
+								</a>
 							</div>
 						</div>
 					</div>
