--- a/client/index.html
+++ b/client/index.html
@@ -266,16 +266,29 @@
 												</div>
 											</div>
 										</div>
+										<div class="discount">
+											<span class="discount__title">Ваша накопительная скидка:</span>
+											<span class="discount__percent"><span>2</span>%</span>
+											<span class="clarification">что это?</span>
+										</div>
 										<div class="form-group form-group--margin">
 											<div class="row no-padding">
-												<div class="col-md-8">
-													<label class="control-label">Ваша накопительная скидка:</label>
+												<div class="col-md-6">
+													<span class="clarification">У меня есть код скидки</span>
 												</div>
-												<div class="col-md-4">
-
+												<div class="col-md-6">
+													<input id="phone" name="phone" type="text" class="form-control form-control--color">
+												</div>
+												<div class="col-md-12">
+													<div class="discount__text">
+														<p>Накопительная скидка и скидка по купону не суммируются. В случае наличия двух скидок в рассчете используется максимальная скидка</p>
+													</div>
 												</div>
 											</div>
 										</div>
+
+
+
 									</form>
 								</div>
 							</div>
@@ -341,6 +354,7 @@
 	</div>
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/hammerjs/hammer.min.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="bower_components/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 	<script src="bem_components/header/scripts/mobile-menu.js"></script>
