--- a/client/sub.html
+++ b/client/sub.html
@@ -7,7 +7,9 @@
 	<title>Get loot</title>
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="bower_components/bootstrap-select/dist/css/bootstrap-select.min.css">
+	<link rel="stylesheet" href="bower_components/titatoggle/dist/titatoggle-dist-min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="fonts/fonts.css">
 	<link rel="stylesheet" href="bem_components/common/common.css">
 	<link rel="stylesheet" href="bem_components/header/header.css">
@@ -219,7 +221,7 @@
 									<div class="card card--mini" style="background-image: url(./img/sub-category/1.png)">
 									</div>
 									<div class="text-right card-price">
-										<span class="card__title card__title--small">4190 <span class="rub">Р</span></span>
+										<span class="card__title card__title--small">4190 <i class="fa fa-rub" aria-hidden="true"></i></span>
 									</div>
 									<div class="card-description">
 										<div class="card-description__title">
@@ -238,7 +240,7 @@
 									<div class="card card--mini" style="background-image: url(./img/sub-category/2.png)">
 									</div>
 									<div class="text-right card-price">
-										<span class="card__title card__title--small">790 <span class="rub">Р</span></span>
+										<span class="card__title card__title--small">790 <i class="fa fa-rub" aria-hidden="true"></i></span>
 									</div>
 									<div class="card-description">
 										<div class="card-description__title">
@@ -257,7 +259,7 @@
 									<div class="card card--mini" style="background-image: url(./img/sub-category/3.png)">
 									</div>
 									<div class="text-right card-price">
-										<span class="card__title card__title--small">13900 <span class="rub">Р</span></span>
+										<span class="card__title card__title--small">13900 <i class="fa fa-rub" aria-hidden="true"></i></span>
 									</div>
 									<div class="card-description">
 										<div class="card-description__title">
@@ -276,7 +278,7 @@
 									<div class="card card--mini" style="background-image: url(./img/sub-category/4.png)">
 									</div>
 									<div class="text-right card-price">
-										<span class="card__title card__title--small">790 <span class="rub">Р</span></span>
+										<span class="card__title card__title--small">790 <i class="fa fa-rub" aria-hidden="true"></i></span>
 									</div>
 									<div class="card-description">
 										<div class="card-description__title">
@@ -295,7 +297,7 @@
 									<div class="card card--mini" style="background-image: url(./img/sub-category/5.png)">
 									</div>
 									<div class="text-right card-price">
-										<span class="card__title card__title--small">4190 <span class="rub">Р</span></span>
+										<span class="card__title card__title--small">4190 <i class="fa fa-rub" aria-hidden="true"></i></span>
 									</div>
 									<div class="card-description">
 										<div class="card-description__title">
@@ -314,7 +316,7 @@
 									<div class="card card--mini" style="background-image: url(./img/sub-category/6.png)">
 									</div>
 									<div class="text-right card-price">
-										<span class="card__title card__title--small">790 <span class="rub">Р</span></span>
+										<span class="card__title card__title--small">790 <i class="fa fa-rub" aria-hidden="true"></i></span>
 									</div>
 									<div class="card-description">
 										<div class="card-description__title">
@@ -333,7 +335,7 @@
 									<div class="card card--mini" style="background-image: url(./img/sub-category/3.png)">
 									</div>
 									<div class="text-right card-price">
-										<span class="card__title card__title--small">13900 <span class="rub">Р</span></span>
+										<span class="card__title card__title--small">13900 <i class="fa fa-rub" aria-hidden="true"></i></span>
 									</div>
 									<div class="card-description">
 										<div class="card-description__title">
@@ -352,7 +354,7 @@
 									<div class="card card--mini" style="background-image: url(./img/sub-category/4.png)">
 									</div>
 									<div class="text-right card-price">
-										<span class="card__title card__title--small">790 <span class="rub">Р</span></span>
+										<span class="card__title card__title--small">790 <i class="fa fa-rub" aria-hidden="true"></i></span>
 									</div>
 									<div class="card-description">
 										<div class="card-description__title">
@@ -440,6 +442,7 @@
 	</div>
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/hammerjs/hammer.min.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="bower_components/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 	<script src="bem_components/header/scripts/mobile-menu.js"></script>
