morphing icon added

--- a/client/index.html
+++ b/client/index.html
@@ -94,7 +94,6 @@
 									<a class="menu-link" href="#">
 										<div class="menu__item">Контакты</div>
 									</a>
-
 									<div class="logentry">
 										<a href="#" class="logentry__link">Личный кабинет</a>
 										<div>
@@ -112,7 +111,7 @@
 					</div>
 					<div class="menu--mobile">
 						<div id="menuBtn" class="menu--mobile__btn">
-							<i class="material-icons menu--mobile__icon">menu</i>
+							<span class="hamburger-icon"></span>
 						</div>
 						<div id="menuContent" class="menu--mobile__content paper-shadow-z2">
 							<ul class="menu-list">
@@ -148,9 +147,6 @@
 					</div>
 				</div>
 			</header>
-
-
-
 			<div class="category-head-area">
 				<div class="category-head">
 					<div class="category-controls">
@@ -162,8 +158,6 @@
 					<div class="category-head__title">Цитадель адского пламени (эпохальный режим) Лут-поход</div>
 				</div>
 			</div>
-
-
 			<div class="main-content-area">
 				<div class="main-content paper-shadow-z2">
 					<div class="row no-padding">
