--- a/client/index.html
+++ b/client/index.html
@@ -8,11 +8,12 @@
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="bower_components/bootstrap-select/dist/css/bootstrap-select.min.css">
 	<link rel="stylesheet" href="bower_components/titatoggle/dist/titatoggle-dist-min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="fonts/fonts.css">
 	<link rel="stylesheet" href="bem_components/common/common.css">
 	<link rel="stylesheet" href="bem_components/header/header.css">
+	<link rel="stylesheet" href="bem_components/mobile-menu/mobile-menu.css">
 	<link rel="stylesheet" href="bem_components/slider/slider.css">
 	<link rel="stylesheet" href="bem_components/labels/labels.css">
 	<link rel="stylesheet" href="bem_components/sub-categories/sub-categories.css">
@@ -224,9 +225,7 @@
 											<div class="row no-padding">
 												<div class="col-md-6">
 													<label class="control-label">Skype / VK / WhatsApp
-														<span class="circle-question">
-															<span class="circle-question__icon">?</span>
-														</span>
+														<i class="fa fa-question-circle question-circle-icon" aria-hidden="true"></i>
 													</label>
 												</div>
 												<div class="col-md-6">
@@ -238,9 +237,7 @@
 											<div class="row no-padding">
 												<div class="col-md-6">
 													<label class="control-label">Номер телефона
-														<span class="circle-question">
-															<span class="circle-question__icon">?</span>
-														</span>
+														<i class="fa fa-question-circle question-circle-icon" aria-hidden="true"></i>
 													</label>
 												</div>
 												<div class="col-md-6">
@@ -385,7 +382,7 @@
 	<script src="bower_components/hammerjs/hammer.min.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="bower_components/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
-	<script src="bem_components/header/scripts/mobile-menu.js"></script>
+	<script src="bem_components/mobile-menu/mobile-menu.js"></script>
 	<script src="bem_components/select/select.js"></script>
 	<script src="//vk.com/js/api/openapi.js?121"></script>
 	<script>
