--- a/client/index.html
+++ b/client/index.html
@@ -260,14 +260,43 @@
 											</div>
 										</div>
 										<div class="discount">
-											<span class="discount__title">Ваша накопительная скидка:</span>
-											<span class="discount__percent"><span>2</span>%</span>
-											<span class="clarification">что это?</span>
+											<div class="row">
+												<div class="col-md-6">
+													<span class="discount__title">Ваша накопительная скидка:</span>
+													<span class="discount__percent"><span>2</span>%</span>
+												</div>
+												<div class="col-md-6">
+
+													<span id="hover-trigger-1" class="clarification">
+													<span>что это?</span>
+													<div id="hover-block-1" class="hover-block">
+														<div class="hover-block__content">
+															<div class="hover-block__text">
+																Накопительная скидка привязана к Вашему e-mail и составляет:
+																<br> - от 1000р. - 2%
+																<br> - от 2000р. - 3%
+																<br> - от 5000р. - 5%
+																<br> - от 10000р. - 7%
+															</div>
+														</div>
+													</div>
+													</span>
+												</div>
+											</div>
 										</div>
 										<div class="form-group form-group--margin">
 											<div class="row no-padding">
 												<div class="col-md-6">
-													<span class="clarification">У меня есть код скидки</span>
+													<span id="hover-trigger-2" class="clarification">
+														<span>У меня есть код скидки</span>
+													<div id="hover-block-2" class="hover-block">
+														<div class="hover-block__content">
+															<div class="hover-block__text">
+																Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam expedita, voluptatem ratione possimus suscipit, consectetur quidem sequi perspiciatis cum non quis alias odit eius praesentium voluptas voluptate velit in totam.50
+															</div>
+														</div>
+													</div>
+													</span>
 												</div>
 												<div class="col-md-6">
 													<input id="phone" name="phone" type="text" class="form-control form-control--color">
