--- a/client/categ.html
+++ b/client/categ.html
@@ -104,7 +104,7 @@
 					</div>
 					<div class="menu--mobile">
 						<div id="menuBtn" class="menu--mobile__btn">
-							<i class="material-icons menu--mobile__icon">menu</i>
+							<span class="hamburger-icon"></span>
 						</div>
 						<div id="menuContent" class="menu--mobile__content paper-shadow-z2">
 							<ul class="menu-list">
