--- a/client/categ.html
+++ b/client/categ.html
@@ -31,7 +31,9 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-4">
 							<div class="logo">
-								<div class="logo__pic"></div>
+								<a href="#">
+									<div class="logo__pic"></div>
+								</a>
 								<h1 class="logo__title">Игровая валюта, прокачка, рейды
 									<br> и другие услуги</h1>
 							</div>
@@ -86,7 +88,7 @@
 									<a class="menu-link" href="#">
 										<div class="menu__item">Скидки</div>
 									</a>
-									<a class="menu-link" href="#">
+									<a class="menu-link menu-link--active" href="#">
 										<div class="menu__item">Гарантии и отзывы</div>
 									</a>
 									<a class="menu-link" href="#">
@@ -143,9 +145,11 @@
 			<div class="category-head-area">
 				<div class="category-head">
 					<div class="category-controls">
-						<div class="category-controls__btn">
-							<i class="material-icons category-icon">chevron_left</i>
-						</div>
+						<a href="#">
+							<div class="category-controls__btn">
+								<i class="material-icons category-icon">chevron_left</i>
+							</div>
+						</a>
 						<span class="category-row">Другие игры</span>
 					</div>
 					<div class="category-head__title">World of warcraft</div>
