--- a/client/main.html
+++ b/client/main.html
@@ -31,7 +31,9 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-4">
 							<div class="logo">
-								<div class="logo__pic"></div>
+								<a href="#">
+									<div class="logo__pic"></div>
+								</a>
 								<h1 class="logo__title">Игровая валюта, прокачка, рейды
 									<br> и другие услуги</h1>
 							</div>
@@ -93,7 +95,7 @@
 									<a class="menu-link" href="#">
 										<div class="menu__item">Поставщикам</div>
 									</a>
-									<a class="menu-link" href="#">
+									<a class="menu-link menu-link--active" href="#">
 										<div class="menu__item">Контакты</div>
 									</a>
 									<a class="menu-link" href="#">
