--- a/client/sub.html
+++ b/client/sub.html
@@ -31,7 +31,9 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-4">
 							<div class="logo">
-								<div class="logo__pic"></div>
+								<a href="#">
+									<div class="logo__pic"></div>
+								</a>
 								<h1 class="logo__title">Игровая валюта, прокачка, рейды
 									<br> и другие услуги</h1>
 							</div>
@@ -79,11 +81,11 @@
 					<div class="menu--desktop">
 						<div class="row">
 							<div class="col-md-12">
-								<div class="menu paper-shadow-z2">
+								<div class="menu menu--with-logentry paper-shadow-z2">
 									<a class="menu-link" href="#">
 										<div class="menu__item">Faq</div>
 									</a>
-									<a class="menu-link" href="#">
+									<a class="menu-link menu-link--active" href="#">
 										<div class="menu__item">Скидки</div>
 									</a>
 									<a class="menu-link" href="#">
@@ -205,9 +207,11 @@
 			<div class="category-head-area">
 				<div class="category-head">
 					<div class="category-controls">
-						<div class="category-controls__btn">
-							<i class="material-icons category-icon">chevron_left</i>
-						</div>
+						<a href="#">
+							<div class="category-controls__btn">
+								<i class="material-icons category-icon">chevron_left</i>
+							</div>
+						</a>
 						<span class="category-row">World of warcraft</span>
 					</div>
 					<div class="category-head__title category-head__title--less-font">World of warcraft: лут рейды</div>
