--- a/client/prod.html
+++ b/client/prod.html
@@ -31,7 +31,9 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-4">
 							<div class="logo">
-								<div class="logo__pic"></div>
+								<a href="#">
+									<div class="logo__pic"></div>
+								</a>
 								<h1 class="logo__title">Игровая валюта, прокачка, рейды
 									<br> и другие услуги</h1>
 							</div>
@@ -79,14 +81,14 @@
 					<div class="menu--desktop">
 						<div class="row">
 							<div class="col-md-12">
-								<div class="menu paper-shadow-z2">
+								<div class="menu menu--with-logentry paper-shadow-z2">
 									<a class="menu-link" href="#">
 										<div class="menu__item">Faq</div>
 									</a>
 									<a class="menu-link" href="#">
 										<div class="menu__item">Скидки</div>
 									</a>
-									<a class="menu-link" href="#">
+									<a class="menu-link menu-link--active" href="#">
 										<div class="menu__item">Гарантии и отзывы</div>
 									</a>
 									<a class="menu-link" href="#">
@@ -151,12 +153,14 @@
 			<div class="category-head-area">
 				<div class="category-head">
 					<div class="category-controls">
-						<div class="category-controls__btn">
-							<i class="material-icons category-icon">chevron_left</i>
-						</div>
+						<a href="#">
+							<div class="category-controls__btn">
+								<i class="material-icons category-icon">chevron_left</i>
+							</div>
+						</a>
 						<div class="category-row">World of Warcraft: лут-рейды</div>
 					</div>
-					<div class="category-head__title">Цитадель адского пламени (эпохальный режим) Лут-поход</div>
+					<div class="category-head__title category-head__title--small">Цитадель адского пламени (эпохальный режим) Лут-поход</div>
 				</div>
 			</div>
 			<div class="main-content-area">
@@ -225,7 +229,17 @@
 											<div class="row no-padding">
 												<div class="col-md-6">
 													<label class="control-label">Skype / VK / WhatsApp
-														<i class="fa fa-question-circle question-circle-icon" aria-hidden="true"></i>
+														<span id="hover-trigger-social">
+															<i class="fa fa-question-circle question-circle-icon" aria-hidden="true">	
+															</i>
+															<div id="hover-block-social" class="hover-block">
+																<div class="hover-block__content">
+																	<div class="hover-block__text">
+																		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam expedita, voluptatem ratione possimus suscipit, consectetur quidem sequi perspiciatis cum non quis alias odit eius praesentium voluptas voluptate velit in totam.
+																	</div>
+																</div>
+															</div>
+														</span>
 													</label>
 												</div>
 												<div class="col-md-6">
@@ -237,7 +251,17 @@
 											<div class="row no-padding">
 												<div class="col-md-6">
 													<label class="control-label">Номер телефона
-														<i class="fa fa-question-circle question-circle-icon" aria-hidden="true"></i>
+														<span id="hover-trigger-phone">
+															<i class="fa fa-question-circle question-circle-icon" aria-hidden="true">	
+															</i>
+															<div id="hover-block-phone" class="hover-block">
+																<div class="hover-block__content">
+																	<div class="hover-block__text">
+																		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam expedita, voluptatem ratione possimus suscipit, consectetur quidem sequi perspiciatis cum non quis alias odit eius praesentium voluptas voluptate velit in totam.
+																	</div>
+																</div>
+															</div>
+														</span>
 													</label>
 												</div>
 												<div class="col-md-6">
@@ -251,7 +275,7 @@
 													<label class="control-label">Способ оплаты</label>
 												</div>
 												<div class="col-xs-12 col-sm-12 col-md-6">
-													<select class="selectpicker">
+													<select id="pay" name="pay" class="selectpicker">
 														<option value="PayPal1">PayPal 1</option>
 														<option value="PayPal2">PayPal 2</option>
 														<option value="PayPal3">PayPal 3</option>
@@ -292,14 +316,14 @@
 													<div id="hover-block-2" class="hover-block">
 														<div class="hover-block__content">
 															<div class="hover-block__text">
-																Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam expedita, voluptatem ratione possimus suscipit, consectetur quidem sequi perspiciatis cum non quis alias odit eius praesentium voluptas voluptate velit in totam.50
+																Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam expedita, voluptatem ratione possimus suscipit, consectetur quidem sequi perspiciatis cum non quis alias odit eius praesentium voluptas voluptate velit in totam.
 															</div>
 														</div>
 													</div>
 													</span>
 												</div>
 												<div class="col-md-6">
-													<input id="phone" name="phone" type="text" class="form-control form-control--color">
+													<input id="discount" name="discount" type="text" class="form-control form-control--color">
 												</div>
 												<div class="col-md-12">
 													<div class="discount__text">
