--- a/client/categ.html
+++ b/client/categ.html
@@ -121,7 +121,7 @@
 									<div class="menu-divider"></div>
 								</a>
 								<a href="#" class="menu-link--mobile">
-									<li class="list__item" aria-haspopup="true">Гарантии и отзывы</li>
+									<li class="list__item list__item--active" aria-haspopup="true">Гарантии и отзывы</li>
 									<div class="menu-divider"></div>
 								</a>
 								<a href="#" class="menu-link--mobile">
