--- a/client/main.html
+++ b/client/main.html
@@ -130,7 +130,7 @@
 									<div class="menu-divider"></div>
 								</a>
 								<a href="#" class="menu-link--mobile">
-									<li class="list__item" aria-haspopup="true">Контакты</li>
+									<li class="list__item list__item--active" aria-haspopup="true">Контакты</li>
 									<div class="menu-divider"></div>
 								</a>
 								<a href="#" class="menu-link--mobile">
