--- a/client/prod.html
+++ b/client/prod.html
@@ -101,7 +101,9 @@
 										<a href="#" class="logentry__link">Личный кабинет</a>
 										<div>
 											<div class="logentry__email">
-												<i class="material-icons person-icon">person</i> Abracadabra@gmail.com</div>
+												<i class="material-icons person-icon">person</i> 
+												<span class="clip">Abracadabra@gmail.com</span>
+											</div>
 											<div class="logout">
 												<span>/</span>
 												<a href="#" class="logout__link">Выйти</a>
@@ -129,7 +131,7 @@
 									<div class="menu-divider"></div>
 								</a>
 								<a href="#" class="menu-link--mobile">
-									<li class="list__item" aria-haspopup="true">Гарантии и отзывы</li>
+									<li class="list__item list__item--active" aria-haspopup="true">Гарантии и отзывы</li>
 									<div class="menu-divider"></div>
 								</a>
 								<a href="#" class="menu-link--mobile">
