footer problem resolved

--- a/client/main.html
+++ b/client/main.html
@@ -25,6 +25,7 @@
 
 <body>
 	<div class="container-fluid">
+		<div class="header__bg"></div>
 		<div class="content">
 			<header>
 				<div class="header-main-area">
@@ -399,6 +400,7 @@
 			</footer>
 		</div>
 	</div>
+	<div class="footer__bg"></div>
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/hammerjs/hammer.min.js"></script>
