--- a/client/sub.html
+++ b/client/sub.html
@@ -25,6 +25,7 @@
 
 <body>
 	<div class="container-fluid">
+		<div class="header__bg"></div>
 		<div class="content">
 			<header>
 				<div class="header-main-area">
@@ -102,7 +103,7 @@
 										<a href="#" class="logentry__link">Личный кабинет</a>
 										<div>
 											<div class="logentry__email">
-												<i class="material-icons person-icon">person</i> 
+												<i class="material-icons person-icon">person</i>
 												<span class="clip">Abracadabra@gmail.com</span>
 											</div>
 											<div class="logout">
@@ -447,6 +448,7 @@
 			</footer>
 		</div>
 	</div>
+	<div class="footer__bg"></div>
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/hammerjs/hammer.min.js"></script>
