--- a/client/main.html
+++ b/client/main.html
@@ -39,7 +39,7 @@
 									<br> и другие услуги</h1>
 							</div>
 						</div>
-						<div class="col-xs-6 col-sm-6 col-md-4">
+						<div class="col-xs-6 col-sm-6 col-md-4 hide--mobile">
 							<div class="wrap-block">
 								<div class="contacts">
 									<div class="contacts__item">
@@ -59,7 +59,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-xs-6 col-sm-6 col-md-4">
+						<div class="col-xs-6 col-sm-6 col-md-4 hide--mobile">
 							<div class="wrap-block">
 								<div class="social">
 									<div class="social__item">
@@ -348,6 +348,48 @@
 			</div>
 			<footer>
 				<div class="footer-area">
+					<div class="footer-contacts show--mobile">
+						<div class="row">
+							<div class="col-xs-6 col-sm-6 col-md-4">
+								<div class="wrap-block">
+									<div class="contacts">
+										<div class="contacts__item">
+											<div class="contacts__icon contacts__icon--phone"></div>
+											<div class="contacts__text contacts__text--phone">8 (812) <span class="contacts__text--bold">407-21-79</span></div>
+										</div>
+										<div class="contacts__item">
+											<div class="contacts__icon contacts__icon--skype"></div>
+											<div class="contacts__text contacts__text--skype">getloot_ru</div>
+										</div>
+										<div class="contacts__item">
+											<div class="contacts__icon contacts__icon--chat"></div>
+											<div class="contacts__text contacts__text--chat">чат с оператором
+												<br><span class="contacts__text--small">(с 11 до 24 по мск. времени)</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-xs-6 col-sm-6 col-md-4">
+								<div class="wrap-block">
+									<div class="social">
+										<div class="social__item">
+											<div class="social__icon social__icon--vk"></div>
+											<a class="social__link social__link--vk" href="http://vk.com/getloot-ru" target="_blank">vk.com/getloot-ru</a>
+										</div>
+										<div class="social__item">
+											<div class="social__icon social__icon--tw"></div>
+											<a class="social__link social__link--tw" href="http://twitter.com/getloot" target="_blank">twitter.com/getloot</a>
+										</div>
+										<div class="social__item">
+											<div class="social__icon social__icon--mail"></div>
+											<a class="social__link social__link--mail" href="mailto:support@getloot.ru">support@getloot.ru</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="row">
 						<div class="col-md-4">
 							<div class="row">
@@ -370,7 +412,7 @@
 								<div id="vkGroups"></div>
 							</div>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-4 hide--mobile">
 							<div class="contacts">
 								<div class="contacts__text contacts__text--phone">8 (812) <span class="contacts__text--bold">407-21-79</span></div>
 								<div class="contacts__note">Время работы консультантов
